syntax = "proto3";

package vn.techres.microservice.grpc.java.java_order_process_three.confirm_order_channel;

service ConfirmOrderChannelService {
    rpc confirmOrderChannel (BaseConfirmOrderChannelRequest) returns (BaseConfirmOrderChannelResponse);
    rpc confirmOrderChanneV2 (BaseConfirmOrderChannelRequest) returns (BaseConfirmOrderChannelResponse);

}

message BaseConfirmOrderChannelRequest {
	int32 branch_id = 1;
	repeated ConfirmOrderChannelRequest confirm_order_channel_requests = 2;
}

message ConfirmOrderChannelRequest {
	int32 id = 1;
    string order_id =2;
    int32 channel_order_food_id =3;
    string channel_branch_id = 4;
    string total_amount = 5;
    string driver_name = 6;
    string driver_avatar = 7;
    string channel_order_food_name = 8;
    string channel_order_food_code = 9;
    repeated OrderChannelDetailRequest details = 10;
    string display_id = 11;
    string discount_amount = 12;
    int64 restaurant_order_id = 13;
    string customer_order_amount = 14;
    string customer_discount_amount = 15;
    string order_amount = 16;
    string driver_phone = 17;
    string customer_name = 18;
    string phone = 19;
    string address = 20;
    string shipping_fee = 21;
    string create_at = 22;
    string channel_branch_name = 23;
    string channel_branch_address = 24;
    string channel_branch_phone = 25;
    string note = 26;
    string item_discount_amount = 27;
    string status_string = 28;
}

message OrderChannelDetailRequest {
    int32 id = 1;
    int32 channel_order_id = 2;
    string order_id = 3;
    int32 channel_order_food_id = 4;
    string food_id = 5;
    string food_name = 6;
    int32 quantity = 7;
    string food_price = 8;
    string food_note = 9;
    string food_options = 10;
    string food_price_addition = 11;
    string discount_food_price = 12;

}

message OrderChannelDetailResponse {
    int32 id = 1;
    int32 channel_order_id = 2;
    string order_id = 3;
    int32 channel_order_food_id = 4;
    string food_id = 5;
    string food_name = 6;
    int32 quantity = 7;
    string price = 8;
    string note = 9;
    repeated AdditionFoodAppFoodResponse food_options = 10;
    string food_price_addition = 11;
}

message AdditionFoodAppFoodResponse {
	string id = 1;
	string name = 2;
	string price = 3;
	int32 quantity = 4;
}

message ConfirmOrderChannelResponse {
	string channel_order_update_json = 2;
}


message FoodNoteResponse {
	int32 food_note_id = 1;
	string food_note = 2;
}


message BaseConfirmOrderChannelResponse {
	int32 status = 1;
  	string message = 2;
  	ConfirmOrderChannelResponse data = 3;
}
